--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ua-parser-js": "^2.0.4"
+    "ua-parser-js": "^2.0.4",
+    "zod": "^4.1.5"
   },
   "scripts": {
     "start": "node dist/index.js",
