--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "mysqldump": "^1.1.0",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
