--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysqldump": "^1.1.0",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
+    "resend": "^6.9.1",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -41,6 +42,7 @@
     "drizzle:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:seed": "tsx src/db/seeder.ts",
+    "test:email": "tsx src/test-email.ts",
     "build": "tsc"
   }
 }
