feat: Implement SMS sending utility with `sendSMS` and `sendOTPSMS` functions, along with a test script.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "db:push": "drizzle-kit push",
     "db:seed": "tsx src/db/seeder.ts",
     "test:email": "tsx src/test-email.ts",
+    "test:sms": "tsx src/test-sms.ts",
     "build": "tsc"
   }
 }
