feat: Update `DATABASE_URL` by removing the password and add new environment variables for Resend API, email sender, frontend URLs, and SMS API.

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-DATABASE_URL=mysql://root:gs190001@localhost:3306/gsgame
+DATABASE_URL=mysql://root:@localhost:3306/gsgame
 # DATABASE_URL=mysql://uuffjvv00nv9jot2:ET9jPjs5jHj5VIuxBJJO@bxtxybcojkr4gdksqgr6-mysql.services.clever-cloud.com:3306/bxtxybcojkr4gdksqgr6
 
 # --------------------------
@@ -6,3 +6,8 @@ DATABASE_URL=mysql://root:gs190001@localhost:3306/gsgame
 # --------------------------
 MYSQLDUMP_PATH="C:\\xampp\\mysql\\bin\\mysqldump.exe"
 MYSQL_PATH="C:\\xampp\\mysql\\bin\\mysql.exe"
+RESEND_API_KEY=""
+EMAIL_FROM=noreply@gamestar365.com
+FRONTEND_URL="http://localhost:5173"
+ADMIN_FRONTEND_URL="http://localhost:5174"
+SMS_API_KEY=
