--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,12 @@ jobs:
             git checkout main
             git pull origin main
             
+            # Install dependencies
+            npm install
+
+            # Push database changes
+            npm run db:push
+
             # Restart services
             pm2 restart gs-server
             nginx -s reload
