feat: Add script and npm command to clear database history for commission, bet results, and transactions.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "db:seed": "tsx src/db/seeder.ts",
     "test:email": "tsx src/test-email.ts",
     "test:sms": "tsx src/test-sms.ts",
+    "db:clear-history": "tsx src/clear-history.ts",
     "build": "tsc"
   }
 }
