--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "archiver": "^7.0.1",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.2",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
